# pycic

./: .gitignore  .travis.yml  LICENSE  README.rst  TODO.md  TODO.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  base.rst  category.rst  conf.py  examples.rst  exceptions.rst  group.rst  index.rst  make.bat  report.rst
pycic/: __init__.py  base.py  category.py  exceptions.py  group.py  report.py
tests/: base.py  test_base.py  test_category.py  test_group.py  test_group_category.py  test_report.py
