[metadata]
name = pycic
version = 0.1.3
summary = Python library for accesing CIC (Centro Integracion Ciudadana) APIs
description-file =
    README.rst
author = Milton Mazzarri
author-email = milmazz@gmail.com
url = https://github.com/milmazz/pycic
license = MIT
platforms =
    unix
    linux
    osx
    win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
keywords =
    cic
[files]
packages =
    pycic
extra_files =
    setup.py
    README.rst
    LICENSE
    requirements.txt
    distribute_setup.py
